# swagger.json
@@ -5,7 +5,7 @@
     "description": "Information about children's books and users.",
     "version": "1.0.0"
   },
-  "host": "childrens-books.onrender.com",
+  "host": "childrens-books.onrender.com/api-docs",
   "basePath": "/",
   "tags": [
     {
@@ -22,6 +22,7 @@
   ],
   "paths": {
     "/children/": {
+      
       "get": {
         "tags": ["books"],
         "description": "",
@@ -225,6 +226,57 @@
         }
       }
     },
+    "/user/login": {
+      "get": {
+        "tags": ["users"],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "password",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/user/logout": {
+      "get": {
+        "tags": ["users"],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/user/{id}": {
       "get": {
         "tags": ["users"],
@@ -303,6 +355,18 @@
             "description": "Internal Server Error"
           }
         }
+      }
+    }
+  },
+  "securityDefinitions": {
+    "books_auth": {
+      "type": "oauth2",
+      "flow": "implicit",
+      "authorizationUrl": "https://childrens-books.onrender.com/api-docs",
+      "scopes": {
+        "post:books": "",
+        "edit:books": "",
+        "delete:books": ""
       }
     }
   }
